syntax = "proto3";

package userservice;

// The User service definition
service UserService {
  // Gets a user by ID
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  
  // Creates a new user
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  
  // Lists all users
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  
  // Updates a user
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  
  // Deletes a user
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

// User message definition
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  int64 created_at = 5;
}

// Request messages
message GetUserRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string role = 3;
}

message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
}

message DeleteUserRequest {
  int32 id = 1;
}

// Response messages
message GetUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message CreateUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  bool success = 3;
  string message = 4;
}

message UpdateUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}